# anki

./: CMakeLists.txt  Component.cpp  Component.h  main.cpp
